# Cpp-projects

./: README.md
Laba_1/: CMakeLists.txt  Functions.cpp  Functions2.cpp  Functions2.h
Labwork(1)/: Functions.cpp  Functions.h  Functions2.cpp  Functions2.h  main.cpp
Labwork(2)/: CMakeLists.txt  Functions.cpp  Functions.h  Structure.h  main.cpp
Labwork(3)/: CMakeLists.txt  Point.cpp  Point.h  Triangle.cpp  Triangle.h  functions.cpp  functions.h  main.cpp
Labwork(4)/: CMakeLists.txt  Functions.cpp  Functions.h  Vector.cpp  Vector.h  main.cpp
Labwork(5)/: CMakeLists.txt  TSystem2LinearEquation.cpp  TSystem2LinearEquation.h  TSystemL3inearEquation.cpp  TSystemL3inearEquation.h  TSystemLinearEquation.cpp  TSystemLinearEquation.h  main.cpp
Labwork(6)/: CMakeLists.txt  Functions.cpp  Functions.h  LinkedList.h  LinkedList.tpp  main.cpp
Labwork(7_8)/: CMakeLists.txt  Functions.cpp  Functions.h  Matrix.cpp  Matrix.h  main.cpp
Labwork1/: CMakeLists.txt  Functions.cpp  Functions.h  Functions2.cpp  Functions2.h  main.cpp
